Added Displays to Strong, .inline, .inlineblock

--- a/style.css
+++ b/style.css
@@ -26,14 +26,20 @@ html {
 
 strong {
   background-color: #ffc0ad;
+  width: 25px;
+  display: block;
 }
 
 .inline {
   background-color: #ffc0ad;
+  width: 25px;
+  display: inline;
 }
 
 .inlineBlock {
   background-color: #ff8ba7;
+  width: 50px;
+  display: inline-block;
 }
 
 .two {
